--- a/ProjectInfo.json
+++ b/ProjectInfo.json
@@ -2,5 +2,5 @@
     "name": "Techmine",
     "Author": "Achira Lahboonma",
     "other": "...",
-    "Main": "/src/Main.js"
+    "Main": "src/Main.js"
 }
